--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1794,3 +1794,48 @@
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is 5 and y is 6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Another way to call functions is with keyword arguments\n",
+    "add(y=6, x=5)  # Keyword arguments can arrive in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function Scope"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "\n",
+    "def set_x(num):\n",
