--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1839,3 +1839,32 @@
     "x = 5\n",
     "\n",
     "def set_x(num):\n",
+    "    # Local var x not the same as global variable x\n",
+    "    x = num  # => 43\n",
+    "    print(x)  # => 43\n",
+    "\n",
+    "set_x(43)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# You can import modules\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
