--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1868,3 +1868,34 @@
   {
    "cell_type": "code",
    "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.sqrt(16)  # => 4.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# You can get specific functions from a module\n",
+    "from math import ceil, floor"
+   ]
+  },
+  {
+   "cell_type": "code",
