--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1932,3 +1932,30 @@
      "metadata": {},
      "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "floor(3.7)  # => 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# You can shorten module names\n",
+    "import math as m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
