--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1959,3 +1959,40 @@
       "text/plain": [
        "True"
       ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.sqrt(16) == m.sqrt(16)  # => True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# 6. Introduction to Numpy\n",
+    "\n",
+    "Numpy is a widely-used linear algebra library for python. It enables us to do matrix or vector computations efficiently and effectively. \n",
+    "\n",
+    "Most of the machine-learning tutorials will be written using numpy. For this reason we will also give a basic introduction to Numpy.\n",
+    "\n",
+    "### Basics\n",
+    "\n",
+    "First let's import numpy, giving it a shorter alias `np`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
