--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1996,3 +1996,41 @@
    "source": [
     "import numpy as np"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s create a python array and a Numpy array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# python array\n",
+    "a_li = list(range(10000)) # create a list from 0 to 9999\n",
+    "\n",
+    "# You can check the type of a variable using the function `type()`\n",
+    "type(a_li) # => list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
