--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2034,3 +2034,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We will not print out `a_li` as this is a very large list.\n",
+    "\n",
+    "Numpy has a function called **`arange`** that is identical to Python's built-in **`range`**. The only difference is that it will return a numpy array instead of a Python list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   0,    1,    2, ..., 9997, 9998, 9999])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# numpy array\n",
+    "a_np = np.arange(10000)\n",
+    "\n",
+    "a_np # => array([   0,    1,    2, ..., 9997, 9998, 9999])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
