Remove more unused code

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2066,3 +2066,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Slicing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slicing operations on numpy arrays work the same way as with Python list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get first 10 elements of a_li\n",
+    "a_li[:10] # => [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+   ]
+  },
+  {
+   "cell_type": "code",
