Pontoon: Update Arabic (ar) localization of Firefox Screenshots

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2132,3 +2132,39 @@
      "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get last 10 elements of a_li\n",
+    "a_li[-10:] # => [9990, 9991, 9992, 9993, 9994, 9995, 9996, 9997, 9998, 9999]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9990, 9991, 9992, 9993, 9994, 9995, 9996, 9997, 9998, 9999])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get last 10 elements of a_np\n",
+    "a_np[-10:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Speed"
+   ]
+  },
+  {
