--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2168,3 +2168,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Numpy operations on numpy arrays are much faster than equivalent built-in functions on Python lists.\n",
+    "\n",
+    "In the next cells we use the magic function **`%timeit`** that comes automatically with Jupyter noteboook. **`%timeit`** will execute the code that follows it 100k times and return the average runtime. You can identify magic functions by the **`%`** symbol."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "59.3 µs ± 380 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get the sum of `a_li` using native Python `sum()` function\n",
+    "%timeit sum(a_li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
