--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2203,3 +2203,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "7.68 µs ± 132 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get the sum of `a_np` using specialised numpy `np.sum()` function\n",
+    "%timeit np.sum(a_np)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### From arrays to matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's check the type of `a_np`\n",
