signalfd: fix information leak in signalfd_copyinfo

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2237,3 +2237,22 @@
    ],
    "source": [
     "# Let's check the type of `a_np`\n",
+    "type(a_np)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The type of `a_np` is `np.ndarray`. \n",
+    "\n",
+    "`ndarray` stands for *n*-dimensional array. This means a numpy array can have arbitrary number of dimensions. \n",
+    "\n",
+    "Let's try creating a 2-dimensional array, or more conventionally, a matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
