--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2256,3 +2256,35 @@
    "execution_count": 93,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b_np = np.array([[1,2,3],\n",
+    "                 [4,5,6]])\n",
+    "\n",
+    "b_np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Shapes and sizes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can get the shape of the ndarray along each dimension by calling the property `shape` of the associated `np.ndarray`."
+   ]
