changing pom.xml's version via release script [skip ci]

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2321,3 +2321,35 @@
   {
    "cell_type": "code",
    "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b_np.size # => 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reshape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can create the same matrix as `b_np` using a combination of **`arange`** and **`reshape`**."
+   ]
+  },
+  {
