--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2393,3 +2393,37 @@
     "np.arange(6).reshape(2,3)"
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note here that just like **`range`**, **`arange`** starts counting from 0, not 1.\n",
+    "\n",
+    "**`reshape`** is a very powerful function that can convert ndarrays to different shapes.\n",
+    "\n",
+    "You can even get it to infer the size of a certain dimension by passing `-1` to the dimension you don't want to explicitly specify."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [3, 4, 5]])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(6).reshape(-1,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
