replace tab with spaces

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2551,3 +2551,37 @@
    "source": [
     "b_np.T"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrix Operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Addition, Subtraction, Multiplication, and Division on numpy arrays are by default element-wise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  4,  6],\n",
+       "       [ 8, 10, 12]])"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b_np + b_np"
