--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2615,3 +2615,31 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "array([[ 1,  4,  9],\n",
+       "       [16, 25, 36]])"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b_np * b_np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  1.,  1.],\n",
+       "       [ 1.,  1.,  1.]])"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
