--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2643,3 +2643,34 @@
      },
      "execution_count": 107,
      "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b_np / b_np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dot Product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For vector-vector multiplications, you need to use `np.dot`, which stands for dot-product."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
