--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2674,3 +2674,41 @@
       "text/plain": [
        "array([1, 2, 3])"
       ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# first create a 3 elements vector / array\n",
+    "c_np = np.array([1,2,3])\n",
+    "\n",
+    "c_np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get shape of `c_np`\n",
+    "c_np.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
