--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2712,3 +2712,38 @@
    "cell_type": "code",
    "execution_count": 110,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate dot product between `c_np` and itself\n",
+    "np.dot(c_np, c_np)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remember that the dot-product between two vectors is calculated by:\n",
+    "    \n",
+    "$$ \\boldsymbol{a} \\cdot \\boldsymbol{b} = a_1 \\cdot b_1 + a_2 \\cdot b_2 + \\cdots + a_n \\cdot b_n $$\n",
+    "\n",
+    "The two vectors need to have identical number of elements $n$.\n",
+    "\n",
+    "In our case, the calculations was $1\\cdot1 + 2\\cdot2 + 3\\cdot3 = 14$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrix Multiplication"
