--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2747,3 +2747,38 @@
    "metadata": {},
    "source": [
     "### Matrix Multiplication"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a quick linear-algebra refresher, you can matrix-multiply a $n \\times x$ matrix with a $x \\times m$ matrix to get a $n \\times m$ matrix.\n",
+    "\n",
+    "The size of the inner elements $x$ must be the same. \n",
+    "\n",
+    "For a quick overview of matrix-multiplication, see [this link](https://www.mathsisfun.com/algebra/matrix-multiplying.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are several ways to do matrix multiplications in Numpy.\n",
+    "\n",
+    "- `np.dot`\n",
+    "- `np.matmul`\n",
+    "- the `@` operator\n",
+    "\n",
+    "When multiplying arrays of less than 2 dimensions, they are identical."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[14, 32],\n",
