--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2782,3 +2782,38 @@
      "data": {
       "text/plain": [
        "array([[14, 32],\n",
+       "       [32, 77]])"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate dot product between `b_np` and its transpose.\n",
+    "np.dot(b_np, b_np.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[14, 32],\n",
+       "       [32, 77]])"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.matmul(b_np, b_np.T)"
+   ]
+  },
+  {
