--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2817,3 +2817,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[14, 32],\n",
+       "       [32, 77]])"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b_np @ b_np.T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because we are multiplying `b_np` (a $2 \\times 3$ matrix) with its transpose (a $3 \\times 2$ matrix), we get as output a $2 \\times 2$ matrix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In higher dimensions, you should always use `np.matmul` as `np.dot` may give unpredictable results.\n",
+    "\n",
+    "The `@` operator is just syntactic sugar for `np.matmul`, i.e. it will evaluate to `np.matmul` under the hood."
