--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2851,3 +2851,29 @@
     "In higher dimensions, you should always use `np.matmul` as `np.dot` may give unpredictable results.\n",
     "\n",
     "The `@` operator is just syntactic sugar for `np.matmul`, i.e. it will evaluate to `np.matmul` under the hood."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ones and Zeros"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can initialise a matrix of ones using `np.ones()`, giving the function a tuple containing the matrix size as the argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  1.,  1.,  1.],\n",
+       "       [ 1.,  1.,  1.,  1.],\n",
