--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2877,3 +2877,28 @@
       "text/plain": [
        "array([[ 1.,  1.,  1.,  1.],\n",
        "       [ 1.,  1.,  1.,  1.],\n",
+       "       [ 1.,  1.,  1.,  1.]])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a 3 x 4 matrix of ones\n",
+    "np.ones((3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.]])"
+      ]
