--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2902,3 +2902,35 @@
        "       [ 0.,  0.,  0.,  0.],\n",
        "       [ 0.,  0.,  0.,  0.]])"
       ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# you can do the same with `np.zeros()`\n",
+    "np.zeros((3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  6.],\n",
+       "       [ 15.]])"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# do a a matrix-vector multiplication using `np.dot()`\n",
+    "np.dot(b_np, np.ones((3,1)))"
+   ]
