ignore pyc files

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2934,3 +2934,37 @@
     "# do a a matrix-vector multiplication using `np.dot()`\n",
     "np.dot(b_np, np.ones((3,1)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More Operations\n",
+    "\n",
+    "Numpy comes with standard mathematic functions such as:\n",
+    "\n",
+    "- summary statistics\n",
+    "    - **`sum`** \n",
+    "    - **`mean`**\n",
+    "    - **`std`** for standard deviation\n",
+    "- element-wise identities\n",
+    "    - **`abs`** for absolute, \n",
+    "    - **`log`** for logarithm\n",
+    "    - **`exp`** for exponentiation, \n",
+    "- etc..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
