trying to fix the build

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -2968,3 +2968,39 @@
      "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the sum of the array [1,2,3]\n",
+    "np.sum(np.array([1,2,3])) # => 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the average of the array [1,2,3]\n",
+    "np.mean(np.array([1,2,3])) # => 2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
