--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -3004,3 +3004,37 @@
     {
      "data": {
       "text/plain": [
+       "0.81649658092772603"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the standard deviation of the array [1,2,3]\n",
+    "np.std(np.array([1,2,3])) # => 0.81649658092772603"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the absolute value of the array [-1,2,-3]\n",
+    "np.abs(np.array([-1,2,-3])) # => array([1, 2, 3])"
+   ]
+  },
