--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -3038,3 +3038,31 @@
     "np.abs(np.array([-1,2,-3])) # => array([1, 2, 3])"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.69314718,  1.09861229])"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the logarithm of the array [1,2,3]\n",
+    "np.log(np.array([1,2,3])) # => array([0., 0.69314718, 1.09861229])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
