--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -3066,3 +3066,39 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "array([  2.71828183,   7.3890561 ,  20.08553692])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the exponentiation of the array [1,2,3]\n",
+    "np.exp(np.array([1,2,3])) # => array([2.71828183, 7.3890561 , 20.08553692])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... and that's it, folks! Have fun with the next section :)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
