--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -3102,3 +3102,11 @@
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
