--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -93,3 +93,32 @@
     "$$ h_{\\theta}(x) = \\theta_0 + \\theta_1 x. $$\n",
     "\n",
     "\n",
+    "Let's try to interpret this equation. It assumes that the relationship between $y$ and $x$ is linear -- meaning that if we increase $x$ by 1, $h_{\\theta}(x)$ will increase by $\\theta_1$ and if we increase $x$ by $47.1$, $h_{\\theta}(x)$ will increase $47.1 \\cdot \\theta_1$, or $47.1$ times $\\theta_1$. The term $\\theta_0$ allows to shift the linear dependency between $h_{\\theta}(x)$ and $x$ by a constant. When $x = 0$, $h_{\\theta}(x)$ predicts $y$ to be exactly equal to $\\theta_0$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 Loading the Data\n",
+    "\n",
+    "In machine learning, we usually represent the data $\\{(x^{(1)}, y^{(1)}), (x^{(2)}, y^{(2)}), \\dotsc, (x^{(m)}, y^{(m)})\\}$ as a matrix $X$ and a vector $y$ where\n",
+    "\\begin{align}\n",
+    "    X &=\n",
+    "        \\begin{bmatrix}\n",
+    "            x_1^{(1)} & x_2^{(1)} & \\cdots & x_n^{(1)} \\\\\n",
+    "            x_1^{(2)} & x_2^{(2)} & \\cdots & x_n^{(2)} \\\\\n",
+    "            \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "            x_1^{(m)} & x_2^{(m)} & \\cdots & x_n^{(m)} \\\\\n",
+    "        \\end{bmatrix} &&\\text{and}\\\\\n",
+    "    y &= \n",
+    "        \\begin{bmatrix}\n",
+    "            y^{(1)} \\\\\n",
+    "            y^{(2)} \\\\\n",
+    "            \\vdots \\\\\n",
+    "            y^{(m)}\n",
+    "        \\end{bmatrix}.\n",
+    "\\end{align}\n",
+    "\n",
+    "In the one dimensional case the matrix $X$ is just\n",
+    "\\begin{align}\n",
