fix(i18n): update translations

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -159,3 +159,36 @@
     "Before starting on any task, it is often useful to understand the data by visualizing it. For this dataset, you can use a scatter plot to visualize the data, since it has only two properties to plot (profit and population).\n",
     "\n",
     "We focus on the inner workings of machine learning algorithms and therefore you do not need to fill in anything for plotting and model diagnostics. Simply execute the cells with matplotlib code to see what you have achieved so far!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the data to see what it looks like\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(X[:, 0], y[:, 0], 'rx', markersize=10)\n",
+    "plt.grid(True)\n",
+    "plt.ylabel('Profit in $10,000s')\n",
+    "plt.xlabel('Population of City in 10,000s')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Linear regression assumes that we can predict $y$ using a linear model (using matrix notation):\n",
+    "\n",
+    "$$ h_{\\theta}(x) = \\theta^Tx $$\n",
+    "\n",
+    "This is just a much more concise way to write:\n",
+    "\n",
