--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -192,3 +192,31 @@
     "\n",
     "This is just a much more concise way to write:\n",
     "\n",
+    "$$ h_{\\theta}(x) = \\theta_1 x_1 + \\theta_2 x_2 + ... \\theta_n x_n$$\n",
+    "\n",
+    "---\n",
+    "#### Aside: Adding a Column of Ones to $X$ and the Expressing the Hypothesis Function in Vector Form\n",
+    "\n",
+    "(Ask us for help if anything is unclear.)\n",
+    "\n",
+    "How can we write the linear hypothesis in matrix form?\n",
+    "\n",
+    "$$ h_{\\theta}(x) = \\theta_0 + \\theta_1 x_1 + \\cdots + \\theta_n x_n. $$\n",
+    "\n",
+    "Recall that we can compactly write a set of linear equations as a matrix multiplication. For example\n",
+    "\\begin{align}\n",
+    "    \\begin{bmatrix}\n",
+    "        a & b \\\\\n",
+    "        c & d\n",
+    "    \\end{bmatrix}\n",
+    "    \\begin{bmatrix}\n",
+    "        e & f \\\\\n",
+    "        g & h\n",
+    "    \\end{bmatrix} &=\n",
+    "    \\begin{bmatrix}\n",
+    "        ae + bg & af + bh \\\\\n",
+    "        ce + dg & cf + dh\n",
+    "    \\end{bmatrix} \\\\\n",
+    "    \\begin{bmatrix}\n",
+    "        i & j \\\\\n",
+    "        k & l\n",
