--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -256,3 +256,29 @@
     "    \\theta^T x,\n",
     "\\end{align}\n",
     "where we add a one in the $x$ vector which you can think of as the $x_0$ term:\n",
+    "\\begin{align}\n",
+    "    x = \\begin{bmatrix}\n",
+    "        1 \\\\\n",
+    "        x_1 \\\\\n",
+    "        \\vdots \\\\\n",
+    "        x_n\n",
+    "    \\end{bmatrix}.\n",
+    "\\end{align}\n",
+    "\n",
+    "Now, the above for a single observation and we have $m$ of those. The convention is to write the matrix of inputs $X$ as a $m \\times (n + 1)$ matrix, where $n + 1$ is the number of variables *plus a constant term*:\n",
+    "\\begin{align}\n",
+    "    X = \\begin{bmatrix}\n",
+    "        1 & x_1^{(1)} & \\cdots & x_n^{(1)} \\\\\n",
+    "        1 & x_1^{(2)} & \\cdots & x_n^{(2)} \\\\\n",
+    "        \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "        1 & x_1^{(m)} & \\cdots & x_n^{(m)}\n",
+    "    \\end{bmatrix}.\n",
+    "\\end{align}\n",
+    "The first column is a column of ones such that when multiplied with the weights vector, we get the term $\\theta_0$ added for every observation:\n",
+    "\\begin{align}\n",
+    "    \\begin{bmatrix}\n",
+    "        h_{\\theta}(x^{(1)}) \\\\\n",
+    "        h_{\\theta}(x^{(2)}) \\\\\n",
+    "        \\vdots \\\\\n",
+    "        h_{\\theta}(x^{(m)})\n",
+    "    \\end{bmatrix} =\n",
