--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -282,3 +282,22 @@
     "        \\vdots \\\\\n",
     "        h_{\\theta}(x^{(m)})\n",
     "    \\end{bmatrix} =\n",
+    "    \\begin{bmatrix}\n",
+    "        \\theta_0 + \\theta_1 x_1^{(1)} + \\cdots + \\theta_n x_n^{(1)} \\\\\n",
+    "        \\theta_0 + \\theta_1 x_1^{(2)} + \\cdots + \\theta_n x_n^{(2)} \\\\\n",
+    "        \\vdots \\\\\n",
+    "        \\theta_0 + \\theta_1 x_1^{(m)} + \\cdots + \\theta_n x_n^{(m)} \\\\\n",
+    "    \\end{bmatrix} =\n",
+    "    \\begin{bmatrix}\n",
+    "        1 & x_1^{(1)} & \\cdots & x_n^{(1)} \\\\\n",
+    "        1 & x_1^{(2)} & \\cdots & x_n^{(2)} \\\\\n",
+    "        \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "        1 & x_1^{(m)} & \\cdots & x_n^{(m)}\n",
+    "    \\end{bmatrix}\n",
+    "    \\begin{bmatrix}\n",
+    "        \\theta_0 \\\\\n",
+    "        \\theta_1 \\\\\n",
+    "        \\vdots \\\\\n",
+    "        \\theta_n\n",
+    "    \\end{bmatrix} =\n",
+    "    X\\theta\n",
