--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -301,3 +301,28 @@
     "        \\theta_n\n",
     "    \\end{bmatrix} =\n",
     "    X\\theta\n",
+    "\\end{align}\n",
+    "In the case of linear regression with a single variable, $X$ will have $ n + 1 = 2$ columns.\n",
+    "\n",
+    "For convenience, we will consider $n$ to be the number of columns of $X$ with the ones added."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X = np.insert(X, 0, 1, axis=1)\n",
+    "m, n = X.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "The task of training a model is therefore finding parameters $\\theta$ such that $h_{\\theta}(x)$ is as close as possible to true labels $y$. What does it mean for a prediction and a true label to be 'close'? We have to define a cost function that penalises deviations of our predictions from the truth and then proceed to search for parameters that minimize such deivations.\n",
