--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -354,3 +354,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def h(theta, X):  # Linear hypothesis function\n",
+    "    hypothesis = np.matmul(X, theta)# YOUR CODE HERE\n",
+    "    return hypothesis\n",
+    "\n",
+    "\n",
+    "def computeCost(theta, X, y):  # Cost function\n",
+    "    \"\"\"\n",
+    "    theta_start is an n- dimensional vector of initial theta guess\n",
+    "    X is matrix with n- columns and m- rows\n",
+    "    y is a matrix with m- rows and 1 column\n",
+    "    \"\"\"\n",
+    "    cost = (1/(2*m)) * np.sum((h(theta,X) - y)**2)# YOUR CODE HERE\n",
+    "    return cost\n",
+    "\n",
+    "#Test that running computeCost with 0's as theta returns 32.07:\n",
+    "\n",
+    "initial_theta = np.zeros((X.shape[1], 1)) #(theta is a vector with n rows and 1 columns (if X has n features) )\n",
+    "print(computeCost(initial_theta, X, y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
