VFS-292: improve read speed

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -377,3 +377,35 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Gradient descent is an iterative procedure where we update parameters in the direction of steepest descent (i.e. the direction that will reduce the cost function the most). How much we wish to move in that direction is controlled by a step size parameter $\\alpha$ (pronounced $alpha$). Hence, the formula is:\n",
+    "\n",
+    "$$ \\theta_{t+1} = \\theta_t - \\alpha  \\frac{dJ}{d\\theta} $$\n",
+    "\n",
+    "The gradient for the cost function can be obtained by differentiating $J$ and is equal to:\n",
+    "\n",
+    "$$ \\frac{dJ}{d\\theta_k} = \\frac{1}{m}\\sum_{i = 1}^m x_k^{(i)}\\left(h_{\\theta}(x^{(i)}) - y^{(i)}\\right) $$\n",
+    "\n",
+    "In pseudocode, we can therefore write the gradient descent algorithm as following:\n",
+    "\n",
+    "1. for t iterations do:\n",
+    "    $$(\\theta_k)_t = (\\theta_k)_{t-1} - \\alpha  \\frac{1}{m}\\sum_{i = 1}^m x_k^{(i)}\\left(h_{\\theta}(x^{(i)}) - y^{(i)}\\right) $$\n",
+    "5. end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Actual gradient descent minimizing routine\n",
+    "def descendGradient(X, y, theta_start=np.zeros(2)):\n",
+    "    \"\"\"\n",
+    "    theta_start is an n- dimensional vector of initial theta guess\n",
+    "    X is matrix with n- columns and m- rows\n",
+    "    \"\"\"\n",
+    "    theta = theta_start\n",
+    "    \n",
