some minor refactoring

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -409,3 +409,35 @@
     "    \"\"\"\n",
     "    theta = theta_start\n",
     "    \n",
+    "    # Store costs over GD iterations to plot them later!\n",
+    "    cost_history = []  \n",
+    "    \n",
+    "    # Store parameters over GD iterations to visualize how they change later\n",
+    "    theta_history = []\n",
+    "    for _ in range(iterations):\n",
+    "        theta_new = theta\n",
+    "        cost_history.append(computeCost(theta, X, y))\n",
+    "\n",
+    "        theta_history.append(list(theta[:, 0]))\n",
+    "\n",
+    "        for j in range(len(theta_new)):\n",
+    "            X_j = np.array(X[:, j]).reshape(m, 1)\n",
+    "            theta_new[j] = theta_new[j]- alpha * (1/m) * np.sum(X_j * (h(theta, X)-y)) # YOUR CODE HERE\n",
+    "        theta = theta_new\n",
+    "    return theta, theta_history, cost_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Actually run gradient descent to get the best-fit theta values\n",
+    "initial_theta = np.zeros((X.shape[1], 1))\n",
+    "theta, theta_history, cost_history = descendGradient(X, y, initial_theta)\n",
+    "\n",
+    "# Plot the convergence of the cost function\n",
+    "def plotConvergence(cost_history):\n",
