--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -504,3 +504,34 @@
     "\n",
     "To understand the cost function $J(\\theta)$ better, you will now plot the cost over\n",
     "a 2-dimensional grid of $\\theta_0$ and $\\theta_1$ values. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#Import necessary matplotlib tools for 3d plots\n",
+    "from mpl_toolkits.mplot3d import axes3d, Axes3D\n",
+    "from matplotlib import cm\n",
+    "import itertools\n",
+    "\n",
+    "fig = plt.figure(figsize=(12, 12))\n",
+    "ax = fig.gca(projection='3d')\n",
+    "\n",
+    "xvals = np.arange(-10, 10, .5)\n",
+    "yvals = np.arange(-1, 4, .1)\n",
+    "myxs, myys, myzs = [], [], []\n",
+    "for i in xvals:\n",
+    "    for j in yvals:\n",
+    "        myxs.append(i)\n",
+    "        myys.append(j)\n",
+    "        myzs.append(computeCost(np.array([[i], [j]]), X, y))\n",
+    "\n",
+    "scat = ax.scatter(myxs, myys, myzs, c=np.abs(myzs),\n",
+    "                  cmap=plt.get_cmap('YlOrRd'))\n",
+    "\n",
