--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -566,3 +566,52 @@
    "metadata": {},
    "source": [
     "In this part, you will implement linear regression with multiple variables to\n",
+    "predict the prices of houses. Suppose you are selling your house and you\n",
+    "want to know what a good market price would be. One way to do this is to\n",
+    "first collect information on recent houses sold and make a model of housing\n",
+    "prices.\n",
+    "\n",
+    "\n",
+    "The file ex1data2.txt contains a training set of housing prices in Portland,\n",
+    "Oregon. The first column is the size of the house (in square feet), the\n",
+    "second column is the number of bedrooms, and the third column is the price\n",
+    "of the house."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "datafile = 'data/ex1data2.txt'\n",
+    "# Read into the data file\n",
+    "cols = np.loadtxt(datafile, delimiter=',', usecols=(0, 1, 2),\n",
+    "                  unpack=True)  # Read in comma separated data\n",
+    "\n",
+    "# Form the usual \"X\" matrix and \"y\" vector\n",
+    "X = np.transpose(np.array(cols[:-1]))\n",
+    "y = np.transpose(np.array(cols[-1:]))\n",
+    "m = y.size  # number of training examples\n",
+    "\n",
+    "# Insert the usual column of 1's into the \"X\" matrix\n",
+    "X = # YOUR CODE HERE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Quick visualize data\n",
+    "plt.grid(True)\n",
+    "plt.xlim([-100, 5000])\n",
+    "plt.hist(X[:, 0], label='col1')\n",
+    "plt.hist(X[:, 1], label='col2')\n",
+    "plt.hist(X[:, 2], label='col3')\n",
+    "plt.title('Clearly we need feature normalization.')\n",
