--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -615,3 +615,41 @@
     "plt.hist(X[:, 1], label='col2')\n",
     "plt.hist(X[:, 2], label='col3')\n",
     "plt.title('Clearly we need feature normalization.')\n",
+    "plt.xlabel('Column Value')\n",
+    "plt.ylabel('Counts')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By looking at the values, note that house sizes are about\n",
+    "1000 times the number of bedrooms. When features differ by orders of magnitude,\n",
+    "first performing feature scaling can make gradient descent converge\n",
+    "much more quickly.\n",
+    "\n",
+    "There are various ways to normalize features. In this session, we will cover mean-variance normalization: we scale each variable such that it has mean 0 and variance 1.\n",
+    "\n",
+    "$$ x_j = \\frac{x_j - \\mu_j}{\\sigma_j} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Feature normalizing the columns (subtract mean, divide by standard deviation)\n",
+    "#Store the mean and std for later use\n",
+    "#Note don't modify the original X matrix, use a copy\n",
+    "stored_feature_means, stored_feature_stds = [], []\n",
+    "Xnorm = X.copy()\n",
+    "\n",
+    "for icol in range(Xnorm.shape[1]):\n",
+    "    stored_feature_means.append(np.mean(Xnorm[:, icol]))\n",
+    "    stored_feature_stds.append(np.std(Xnorm[:, icol]))\n",
+    "    # Skip the first column\n",
+    "    if not icol:\n",
